<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp" android:orientation="vertical"
    android:background="@color/raceme_cream"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText android:id="@+id/etEmail" android:hint="@string/email"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:inputType="textEmailAddress" android:fontFamily="@font/vt323"/>

    <EditText android:id="@+id/etPassword" android:hint="@string/password"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:inputType="textPassword" android:fontFamily="@font/vt323" />

    <Button android:id="@+id/btnLogin" android:text="@string/login"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <TextView android:id="@+id/tvRegister" android:text="@string/no_account"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="12dp" android:fontFamily="@font/vt323"/>
</LinearLayout>
